[package]
name = "hypersrv"
version = "0.1.0"
edition = "2024"

[features]
http2 = ["hyper/http2"]

[dependencies]
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0", features = ["tokio"] }
log = "0"
socket2 = "0"
tokio = { version = "1", features = ["net", "rt", "sync", "time"] }
